# hypodj

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  subsonity.toml.example
crates/hypodj-build-info/: Cargo.toml
crates/hypodj-build-info/src/: lib.rs
crates/hypodj-cli/: Cargo.toml
crates/hypodj-cli/src/: config.rs  main.rs  mpd.rs  nl.rs  render.rs
crates/hypodj-client/: Cargo.toml
crates/hypodj-client/src/: config.rs  grounding.rs  lib.rs  model.rs  mpd.rs  nl.rs  route.rs  viz.rs
crates/hypodj-core/: Cargo.toml
crates/hypodj-core/src/: cache.rs  clock.rs  config.rs  director.rs  echo.rs  event.rs  executor.rs  fade.rs  handler.rs  intelligence.rs  lib.rs  model.rs  mpd.rs  mpris.rs  nl.rs  plan.rs  player.rs  recognize.rs  resume.rs  scrobble.rs  station_identity.rs  subsonic.rs  timer.rs  viz.rs
crates/hypodj-daemon/: Cargo.toml
crates/hypodj-daemon/src/: main.rs
crates/hypodj-nl/: Cargo.toml
crates/hypodj-nl/src/: cc.rs  gbnf.rs  lib.rs  llama.rs  llm.rs  rules.rs
crates/hypodj-tui/: Cargo.toml  build.rs
crates/hypodj-tui/src/: album_color.rs  art.rs  keymap.rs  main.rs  sigil.rs  state.rs  ui.rs  worker.rs
crates/subsonity-core/: Cargo.toml
crates/subsonity-core/src/: config.rs  handler.rs  lib.rs  mpd.rs  player.rs  subsonic.rs
crates/subsonity-daemon/: Cargo.toml
crates/subsonity-daemon/src/: main.rs
docs/design/: waveform-visualizer.md
nix/: clients.nix  hypodj-module.nix  overlay.nix  package.nix
