[package]
name = "hypodj-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hjq"
path = "src/main.rs"

# Depends on the shared hypodj-client for the one client implementation (MpdConn,
# nl handshake seams, config, and the NowPlaying/queue parsing). This crate keeps
# only the text card/queue formatters and the argv/handshake glue. Model-free by
# construction: no dependency on hypodj-nl, hypodj-core, or any model.
[dependencies]
hypodj-client = { path = "../hypodj-client" }
