[package]
name = "hypodj-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# NON-model schema-derive gate. Adds `schemars::JsonSchema` to the bounded plan
# IR pieces the NL model surface references, so `hypodj-nl`'s `llm` feature can
# derive a JSON-Schema/GBNF from the SINGLE source of truth (this crate's IR).
# schemars is NOT a model dependency, so hypodj-core stays "model-free" with this
# on; it is off by default and off in the daemon's default build.
schema = ["dep:schemars"]

[dependencies]
schemars = { version = "0.8", optional = true }
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
opensubsonic.workspace = true
url.workspace = true
# Civil (wall-clock) time for P2 WallClock plan triggers. Only the pure math is
# used (a DateTime<Utc> is reduced to a monotonic Duration delay in validate);
# already a transitive dep, pinned here explicitly. serde for the plan IR.
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Real libmpv-backed player (Phase 1). The devshell ships mpv-unwrapped +
# pkg-config, so libmpv2-sys links against it. Pinned to a known-good minor.
libmpv2 = "4.1"
# MPRIS (org.mpris.MediaPlayer2) D-Bus surface for desktop now-playing +
# controls. Pure-Rust (zbus, no new system lib). 0.8 pins zbus 4.4.
mpris-server = "0.8"
# LOAD-BEARING: mpris-server pulls zbus 4.4 with its DEFAULT async-io executor,
# which runs the MPRIS method handlers on a NON-tokio thread. Those handlers call
# set_pause/seek/volume, which spawn the startle-safe fade via tokio::spawn - and
# spawning from the async-io executor thread PANICS ("no reactor running"), so a
# GNOME Pause/Play never replies (D-Bus times out) and the panic kills the zbus
# executor (later clicks do nothing). Adding zbus with the tokio feature unifies
# the single zbus instance onto the tokio reactor, so the MPRIS connection and its
# handlers run inside the tokio runtime and the fade spawns cleanly.
zbus = { version = "4.4", features = ["tokio"] }

[dev-dependencies]
# Deserialize the exact camelCase wire JSON in the wire->model mapping tests,
# through the real `opensubsonic::data` structs. Not a runtime dep.
serde_json = "1"
# The fade/clock tests use tokio's paused virtual clock (start_paused +
# time::advance) for deterministic fake-time scheduling with no real sleeping.
tokio = { workspace = true, features = ["test-util"] }
