[package]
name = "hypodj-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hypodj"
path = "src/main.rs"

# The vertical-slice prover: config -> ping -> browse -> stream URL against a
# LIVE server. Run: cargo run -j2 --bin probe -- <config.toml> <song-id>
[[bin]]
name = "probe"
path = "src/bin/probe.rs"

# The Phase-1 LIVE + HEADLESS playback prover: browse -> album songs -> stream
# URL -> real MpvPlayer decoding to a WAV FILE (never speakers) -> assert real
# bytes decoded. Run: cargo run -j2 --bin play-probe -- <config.toml> [out.wav]
[[bin]]
name = "play-probe"
path = "src/bin/play_probe.rs"

[features]
# Passthroughs for the OPTIONAL model path. Off by default, so a plain
# `cargo build -p hypodj-daemon` pulls NO llama/candle/ort. `llm` is the seam +
# schema (buildable anywhere); `llm-llama` adds the local llama.cpp runtime (needs
# libclang + a model file - a deploy/ops artifact).
llm = ["hypodj-nl/llm"]
llm-llama = ["hypodj-nl/llm-llama"]

[build-dependencies]
# emit() from build.rs: bakes HYPODJ_BUILD_INFO for the enriched --version.
hypodj-build-info = { path = "../hypodj-build-info" }

[dependencies]
# compose() at print time for `hypodj --version`.
hypodj-build-info = { path = "../hypodj-build-info" }
hypodj-core = { path = "../hypodj-core" }
# The NL translator, model-free by default (default-features = false); the `llm`
# feature is re-exported above so the model backend is opt-in only.
hypodj-nl = { path = "../hypodj-nl", default-features = false }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# For the AlbumListType enum passed to the probe's browse call. (The daemon
# talks to Subsonic only through hypodj-core::subsonic; this is the one
# upstream type that leaks into a call-site arg.)
opensubsonic.workspace = true
