[package]
name = "dj-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "dj-gui"
path = "src/main.rs"

# The interactive jukebox TUI. IO (crossterm/ratatui) stays at the edges (main.rs
# + ui.rs); the pure, testable core lives in state.rs. Model-free: builds only on
# hypodj-client, never on hypodj-nl or hypodj-core.
[dependencies]
hypodj-client = { path = "../hypodj-client" }
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true
# Album-art decode only. Trim to the two codecs Subsonic/Navidrome actually serve
# (JPEG/PNG) so we do not pull the whole codec zoo; no default features.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
