[package]
name = "dj-gui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "dj-gui"
path = "src/main.rs"

# The interactive jukebox TUI. IO (crossterm/ratatui) stays at the edges (main.rs
# + ui.rs); the pure, testable core lives in state.rs. Model-free in the DEFAULT
# build: hypodj-client only, never hypodj-nl or hypodj-core. The opt-in `cc` feature
# DELIBERATELY breaks that to pull hypodj-nl (Claude Code CLI backend) for the DJ
# View - localized to the feature, default build unchanged.
[features]
# Client-side Claude Code CLI NL backend, powering the DJ View. Pulls hypodj-nl(cc).
cc = ["dep:hypodj-nl"]

[dependencies]
hypodj-client = { path = "../hypodj-client" }
hypodj-nl = { path = "../hypodj-nl", optional = true, default-features = false, features = ["cc"] }
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true
# Album-art decode only. Trim to the two codecs Subsonic/Navidrome actually serve
# (JPEG/PNG) so we do not pull the whole codec zoo; no default features.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
