[package]
name = "dj-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "dj-gui"
path = "src/main.rs"

# The interactive jukebox TUI. IO (crossterm/ratatui) stays at the edges (main.rs
# + ui.rs); the pure, testable core lives in state.rs. The `cc` feature is now
# DEFAULT (a plain `cargo build` and the nix clients package compile the Claude Code
# CLI backend that powers the DJ View): the thin-client invariant is deliberately
# dropped - the TUI pulls hypodj-nl. Build with `--no-default-features` for the
# model-free TUI. The shipped daemon stays model-free: the nix daemon package builds
# `--bin hypodj` in isolation, so neither cc nor hypodj-core/schema is compiled into
# it. CAVEAT: a plain workspace `cargo build` unifies features (resolver 2), so cc
# here turns on hypodj-core/schema for the whole build and the dev daemon bin links
# it too; that is a dev-build artifact only and does not reach the shipped daemon.
[features]
# ON by default: the client-side Claude Code CLI NL backend, powering the DJ View.
# Pulls hypodj-nl(cc). Runtime is still gated on `claude` being on PATH.
default = ["cc"]
cc = ["dep:hypodj-nl"]

[build-dependencies]
# emit() from build.rs: bakes HYPODJ_BUILD_INFO for the enriched `dj-gui --version`.
hypodj-build-info = { path = "../hypodj-build-info" }

[dependencies]
# compose() at print time for `dj-gui --version`.
hypodj-build-info = { path = "../hypodj-build-info" }
hypodj-client = { path = "../hypodj-client" }
hypodj-nl = { path = "../hypodj-nl", optional = true, default-features = false, features = ["cc"] }
ratatui.workspace = true
crossterm.workspace = true
thiserror.workspace = true
# Album-art decode only. Trim to the two codecs Subsonic/Navidrome actually serve
# (JPEG/PNG) so we do not pull the whole codec zoo; no default features.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
# poll(2) for the single-threaded, deadline-bounded OSC 11 stdin read (album_color).
libc = "0.2"
