[package]
name = "subsonity-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "subsonity"
path = "src/main.rs"

# The vertical-slice prover: config -> ping -> browse -> stream URL against a
# LIVE server. Run: cargo run -j2 --bin probe -- <config.toml> <song-id>
[[bin]]
name = "probe"
path = "src/bin/probe.rs"

# The Phase-1 LIVE + HEADLESS playback prover: browse -> album songs -> stream
# URL -> real MpvPlayer decoding to a WAV FILE (never speakers) -> assert real
# bytes decoded. Run: cargo run -j2 --bin play-probe -- <config.toml> [out.wav]
[[bin]]
name = "play-probe"
path = "src/bin/play_probe.rs"

[dependencies]
subsonity-core = { path = "../subsonity-core" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
# For the AlbumListType enum passed to the probe's browse call. (The daemon
# talks to Subsonic only through subsonity-core::subsonic; this is the one
# upstream type that leaks into a call-site arg.)
opensubsonic.workspace = true
